--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev":"nodemon api/index.js",
-    "start":"node api/index.js"
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.2",
     "nodemon": "^3.1.9"
   }
 }
